syntax = "proto3";

package nogizaka;

service NogizakaProfile {
  rpc FetchProfile(MemberName) returns (Profile) {}
}

message MemberName {
  string name = 1;
}

message Profile {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string birthday = 4;
  string constellation = 5;
  string height = 6;
  string status = 7;
}